# github-mcp

./: pyproject.toml  run_github_mcp.py
github_mcp/: github_client.py  main.py  server.py  tools.py
